<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".View.SecondFragment">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="380dp"
            android:layout_height="813dp"
            android:layout_marginTop="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.120000005">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="289dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textview_second"
                    tools:src="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/caracteristica"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/caracteristica"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#BDBDBD"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/id"
                        android:layout_width="352dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/id"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

                    <TextView
                        android:id="@+id/nombre"
                        android:layout_width="352dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/Nombre"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/tipo"
                        android:layout_width="352dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/Tipo"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="108dp"
                    android:background="#BDBDBD"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/descripcion"
                        android:layout_width="352dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/Descripcion" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="97dp"
                    android:padding="16dp">

                    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                        android:id="@+id/btfab"
                        style="?attr/borderlessButtonStyle"
                        android:layout_width="347dp"
                        android:layout_height="72dp"
                        android:layout_marginEnd="8dp"
                        android:contentDescription="@string/nada"
                        android:fontFamily="monospace"
                        android:text="@string/enviarcorreo"
                        android:textColor="@color/On_Surface"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:backgroundTint="@color/primary_variant"
                        app:icon="@drawable/baseline_mail_outline_24"
                        app:iconSize="35dp"
                        app:iconTint="@color/On_Background" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <Button
                        android:id="@+id/btvolver"
                        android:layout_width="312dp"
                        android:layout_height="68dp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/On_Error"
                        android:fontFamily="monospace"
                        android:text="@string/volver"
                        android:textSize="20sp"
                        app:icon="@drawable/baseline_arrow_back_24"
                        app:iconSize="40dp" />


                </LinearLayout>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>